# centavo

./: .gitignore  Justfile  LICENSE  README.md  docker-compose.prod.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  TESTING.md  pyproject.toml  test_api.py  test_auth.py  test_auth.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_category_budget.py  003_recurring_transactions.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  categories.py  recurring_transactions.py  router.py  transactions.py  users.py
backend/app/bot/: __init__.py  app.py
backend/app/bot/handlers/: link.py
backend/app/bot/parsers/: __init__.py  expense_parser.py
backend/app/bot/services/: __init__.py  bot_service.py
backend/app/core/: constants.py  exceptions.py  redis.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  category.py  recurring_transaction.py  transaction.py  user.py
backend/app/repositories/: base.py  category_repo.py  recurring_transaction_repo.py  transaction_repo.py  user_repo.py
backend/app/schemas/: category.py  common.py  recurring_transaction.py  transaction.py  user.py
backend/app/services/: user_service.py
docker/: docker-compose.dev.yml
frontend/: .dockerignore  .env.example  Dockerfile.dev  README.md  package-lock.json  package.json
frontend/app/: global-error.tsx  layout.tsx
frontend/lib/: api-client.ts  (+2 more)
scripts/: seed_categories.py
(+12 files in other folders)
