[project]
name = "centavo"
version = "0.1.0"
description = "Personal expense tracker backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.124.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]==2.0.44",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pydantic==2.12.5",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.1.0",
    "python-telegram-bot==22.5",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.2.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
    "pyrefly>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyrefly]
python_version = "3.14"
strict = true
